# kobun-tiny-llm

./: .gitattributes  .gitignore  NOTICE.md  README.md  SECURITY.md  codex_review_loop.config.toml  pyproject.toml
data/: corpus_manifest.jsonl  excluded_sources.jsonl  tokenizer_public_char_vocab.meta.json  tokenizer_public_char_vocab.txt  training_augmentation_manifest.json
docs/: ARCHITECTURE.md  AUTONOMY_ARCHITECTURE.md  DATA_AND_RELEASE_POLICY.md  PUBLICATION_AUDIT.md
scripts/: annotate_kobun.py  assert_run_id_unused.py  audit_eval_provenance_manifest.py  audit_metadata_encoding.py  audit_public_manifest.py  audit_rule_ssot.py  audit_rule_tables.py  audit_source_records.py  audit_training_augmentation_manifest.py  autonomous_old_japanese_0_1b_loop.ps1  build_external_knowledge_surface_patterns.py  build_generation_diagnostic_plan.py  build_llm_review_packet.py  build_manifest.py  build_morph_examples.py  build_preference_boost_corpus.py  build_tokenizer_public_vocab.py  build_training_augmentation_manifest.py  build_training_corpus.py  build_upload_ready_evidence.py  build_waka_meter_corpus.py  build_waka_training_corpus.py  build_worldclass_corpus.py  check_checkpoint_model_size.py  check_checkpoint_tokenizer_scope.py  check_checkpoint_training_inputs.py  check_colab_cuda_environment.py  check_eval_clean_current.py  check_eval_contamination.py  check_eval_source_overlap.py  check_generated_training_inputs_lf.py  check_generation_diagnostic_policy.py  check_llm_review_packet_fresh.py  check_model_config.py  check_model_size.py  check_non_release_registry.py  (+111 more)
(+61 files in other folders)
